0x03: Started benchmarking using Timer Class

--- a/BMP File Reader/BMP File Reader/BMP File Reader.vcxproj
+++ b/BMP File Reader/BMP File Reader/BMP File Reader.vcxproj
@@ -138,7 +138,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Structures.h" />
+    <ClInclude Include="BMP.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
